# silverstar

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  auth_controller.cpp  auth_controller.h  conanfile.txt  configuration.cpp  configuration.h  main.cpp  now.sh  silverstar.json  silverstar.json.sample
templates/: confirm_email.html  confirm_email.txt  confirm_mail_subject.txt  password_changed.html  password_changed.txt  password_changed_subject.txt
